Add support for using Google Drive API to perform OCR
Used some Node.js sample codes from Google Drive for Developers v3 as well as https://tanaikech.github.io for reference; add new dependencies for package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "GuanZhang",
   "dependencies": {
     "discord.js": ">=12.5.3",
-    "ocr-space-api": ">=1.0.1"
+    "googleapis": ">=74.2.0",
+    "ocr-space-api": ">=1.0.1",
+    "request": ">=2.88.2",
+    "stream": ">=0.0.2"
   },
   "scripts": {
     "start": "node ocrbot.js"
